<resources>
    <string name="app_name">Desafio04</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="chkbox_remember">Remember</string>
    <string name="action_log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="splash_description">Splash</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password_repeat">Repeat password</string>
    <string name="action_save">Create account</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="action_save_game">Save Game</string>
    <string name="dummy_comic">GAME</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>